Adding limits on how much resource can be allowed to a queue at a time
It is now possible to configure how much resource is allocated to a queue (as a percentage of total resource)

It can be configured:
 - At a global level, so all queues have a the same limit
 - At a queue level, so an individual queue can have its own limit

There is also the ability to configure how much resource can be allocated to a queue in a scheduling round
 - This is a workaround to reduce the error of exceeding the limit in the case of multi clusters requesting jobs at the same time
